# SBPF-3-1

./: .gitignore  Cargo.toml  README.md
sbpf-analyzer/: Cargo.toml  README.md
sbpf-analyzer/src/: main.rs
sbpf-analyzer/src/analyzer/: instructions.rs  metadata.rs  mod.rs  syscalls.rs
sbpf-analyzer/src/output/: json.rs  mod.rs  text.rs
sbpf-common/: Cargo.toml
sbpf-common/src/: lib.rs
sbpf-common/src/binary/: elf.rs  mod.rs  sbpf.rs
sbpf-common/src/instruction/: decoder.rs  mod.rs
sbpf-decompiler/: Cargo.toml  README.md
sbpf-decompiler/src/: main.rs
sbpf-decompiler/src/decompiler/: disasm.rs  lifter.rs  mod.rs  pseudocode.rs
sbpf-decompiler/src/output/: mod.rs
