[workspace]
members = [
    "sbpf-common",
    "sbpf-analyzer",
    "sbpf-decompiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sbpf-tools"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
goblin = "0.8"
solana-sbpf = "0.13"

