[package]
name = "sbpf-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
sbpf-common = { path = "../sbpf-common" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
